--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scripts",
+  "name": "@ollyfg/react-scripts",
   "version": "4.0.3",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
